table and 1 drawn sandcorn

--- a/src/main.html
+++ b/src/main.html
@@ -3,11 +3,10 @@
   <title>Testing canvas</title>
 
   <body>
-    <canvas id="canvas">
-    </canvas>
-    
-    
+    <button id="btn-toggle-scrollbars">Toggle Scrollbars</button>
+    <canvas id="canvas"> </canvas>
 
-    <script src="scripts/main.js"></script>
+    <div id="information">asdfadsf</div>
+    <script src="scripts/falling.js"></script>
   </body>
 </html>
