--- a/src/main.html
+++ b/src/main.html
@@ -2,18 +2,32 @@
   <head>
     <title>Testing canvas</title>
     <link rel="stylesheet" href="styles/matrix.css" />
+    />
   </head>
 
   <body>
-    <div style="position: relative; width: 100%; height: 100%">
-      <canvas
-        id="canvasBackground"
-        style="position: absolute; left: 0; top: 0"
-      ></canvas>
-      <canvas id="canvas" style="position: absolute; left: 0; top: 0"></canvas>
+    <div class="main-container">
+      <div class="canvas-section">
+        <div id="info-box">
+          Particles number: <span id="info-particles-num">0</span>
+        </div>
+
+        <div class="canvas-container">
+          <canvas id="canvasBackground"></canvas>
+          <canvas id="canvas"></canvas>
+        </div>
+
+        <button id="btn-toggle-scrollbars">Toggle Scrollbars</button>
+      </div>
+
+      <!-- Right side: Matrix display section -->
+      <div class="matrix-section">
+        <h3>Matrix Visualization</h3>
+        <div id="matrix-info" class="matrix-info">
+          Matrix will be displayed here...
+        </div>
+      </div>
     </div>
-    <div id="matrix-info" class="matrix-info"></div>
-    <button id="btn-toggle-scrollbars">Toggle Scrollbars</button>
     <script src="scripts/falling.js"></script>
   </body>
 </html>
