--- a/src/main.html
+++ b/src/main.html
@@ -2,7 +2,6 @@
   <head>
     <title>Testing canvas</title>
     <link rel="stylesheet" href="styles/matrix.css" />
-    />
   </head>
 
   <body>
@@ -12,15 +11,12 @@
           Particles number: <span id="info-particles-num">0</span>
         </div>
 
-        <div class="canvas-container">
-          <canvas id="canvasBackground"></canvas>
-          <canvas id="canvas"></canvas>
-        </div>
+        <canvas class="canvas" id="canvasBackground"></canvas>
+        <canvas class="canvas" id="canvas"></canvas>
 
         <button id="btn-toggle-scrollbars">Toggle Scrollbars</button>
       </div>
 
-      <!-- Right side: Matrix display section -->
       <div class="matrix-section">
         <h3>Matrix Visualization</h3>
         <div id="matrix-info" class="matrix-info">
