it doesnt work with acceleration

--- a/src/main.html
+++ b/src/main.html
@@ -18,8 +18,10 @@
         <div id="matrix-info" class="matrix-info">
           Matrix will be displayed here...
         </div>
+        <button id="btn-step-forward">Step forward</button>
       </div>
     </div>
+    <script src="scripts/animateFunctions.js"></script>
     <script src="scripts/falling.js"></script>
   </body>
 </html>
