--- a/src/main.html
+++ b/src/main.html
@@ -22,6 +22,7 @@
       </div>
     </div>
     <script src="scripts/animateFunctions.js"></script>
+    <script src="scripts/eventHandlers.js"></script>
     <script src="scripts/falling.js"></script>
   </body>
 </html>
