new idea - the beginning

--- a/src/fallingSand.html
+++ b/src/fallingSand.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Testing canvas</title>
+    <title>Sand fall</title>
     <link rel="stylesheet" href="styles/matrix.css" />
   </head>
 
@@ -21,7 +21,8 @@
         <button id="btn-step-forward">Step forward</button>
       </div>
     </div>
-    <script src="scripts/animateFunctions.js"></script>
+    <script src="scripts/classes.js"></script>
+    <script src="scripts/functions.js"></script>
     <script src="scripts/eventHandlers.js"></script>
     <script src="scripts/falling.js"></script>
   </body>
