--- a/src/fallingSand.html
+++ b/src/fallingSand.html
@@ -21,9 +21,10 @@
         <button id="btn-step-forward">Step forward</button>
       </div>
     </div>
-    <script src="scripts/classes.js"></script>
-    <script src="scripts/functions.js"></script>
-    <script src="scripts/eventHandlers.js"></script>
-    <script src="scripts/falling.js"></script>
+    <script src="scripts/SandSimulation/classes.js"></script>
+    <script src="scripts/drawFunctions.js"></script>
+    <script src="scripts/SandSimulation/functions.js"></script>
+    <script src="scripts/SandSimulation/eventHandlers.js"></script>
+    <script src="scripts/SandSimulation/falling.js"></script>
   </body>
 </html>
