vertical sand falling - fixed bugs with physics

--- a/src/fallingSand.html
+++ b/src/fallingSand.html
@@ -8,7 +8,9 @@
     <div class="main-container">
       <div class="canvas-section">
         <div id="info-box">
-          Particles number: <span id="info-particles-num">0</span>
+          <div>Particles number: <span id="info-particles-num">0</span></div>
+          <div>rows number: <span id="info-rows-num">0</span></div>
+          <div>cols number: <span id="info-cols-num">0</span></div>
         </div>
         <canvas class="canvas" id="canvasBackground"></canvas>
         <canvas class="canvas" id="canvas"></canvas>
@@ -21,8 +23,8 @@
         <button id="btn-step-forward">Step forward</button>
       </div>
     </div>
-    <script src="scripts/SandSimulation/classes.js"></script>
     <script src="scripts/drawFunctions.js"></script>
+    <script src="scripts/SandSimulation/classes.js"></script>
     <script src="scripts/SandSimulation/functions.js"></script>
     <script src="scripts/SandSimulation/eventHandlers.js"></script>
     <script src="scripts/SandSimulation/falling.js"></script>
