messed up sandSimulation code bcs of imports/exports.

--- a/src/fallingSand.html
+++ b/src/fallingSand.html
@@ -23,10 +23,14 @@
         <button id="btn-step-forward">Step forward</button>
       </div>
     </div>
-    <script src="scripts/drawFunctions.js"></script>
-    <script src="scripts/SandSimulation/classes.js"></script>
-    <script src="scripts/SandSimulation/functions.js"></script>
-    <script src="scripts/SandSimulation/eventHandlers.js"></script>
-    <script src="scripts/SandSimulation/falling.js"></script>
+
+    <script type="module" src="scripts/drawFunctions.js"></script>
+    <script type="module" src="scripts/SandSimulation/classes.js"></script>
+    <script type="module" src="scripts/SandSimulation/functions.js"></script>
+    <script
+      type="module"
+      src="scripts/SandSimulation/eventHandlers.js"
+    ></script>
+    <script type="module" src="scripts/SandSimulation/falling.js"></script>
   </body>
 </html>
