--- a/src/snake.html
+++ b/src/snake.html
@@ -6,7 +6,7 @@
   <body>
     <canvas class="canvas" id="snake-game-BG-canvas"></canvas>
     <canvas class="canvas" id="snake-game-canvas"></canvas>
-    <script src="scripts/drawFunctions.js"></script>
-    <script src="scripts/SnakeGame/playSnake.js"></script>
+    <script type="module" src="scripts/drawFunctions.js"></script>
+    <script type="module" src="scripts/SnakeGame/playSnake.js"></script>
   </body>
 </html>
